feat: serve media files
